# partialwrap

./: .coveragerc  .gitignore  .travis.yml  .zenodo.json  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml  master.yml
docs/: Makefile  requirements.txt
docs/examples_userguide/: logli.py  logli1.py  optimize_musica.py  rastrigin.f90  rastrigin.py  rastrigin.sh  rastrigin1.py  rastrigin1.sh  rastrigin2.py  rastrigin3.py  rastrigin_config.py  rastrigin_pid.py  run_musica.py  run_rastrigin.py  run_rastrigin1.py
docs/html/: .buildinfo  api.html  authors.html  changelog.html  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  std_io.html  userguide.html  wrappers.html
docs/html/_modules/: index.html
docs/html/_modules/partialwrap/: std_io.html  wrappers.html
docs/html/_sources/: api.rst  contents.rst.txt  index.rst  index.rst.txt  std_io.rst  userguide.rst  wrappers.rst
docs/html/_static/: documentation_options.js
docs/html/_static/css/: custom.alabaster.css
docs/source/: conf.py  contents.rst  index.rst  install.rst  package.rst  userguide.rst
docs/source/_templates/: layout.html
partialwrap/: __init__.py  std_io.py  version.py  wrappers.py
src/partialwrap/: __init__.py  std_io.py  wrappers.py
tests/: rastrigin1.py  rastrigin1e.py  rastrigin2.py  rastrigin3.py  requirements_test.txt  test_std_io.py  test_wrappers.py
